=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Return zero row count instead of an exception if update by id
   doesn't match any document

 - fix: throw correct exception if one uses `_version` in a select statements
   where clause

 - Fixed an issue that could cause bulk inserts to get stalled.

2014/12/16 0.45.6
=================

 - Fix: Improve Error messages on COPY TO and COPY FROM

 - Fix: correctly plan group by queries using HAVING clause

 - Fix: Added comments to the logging.yml config file and reduced the
   amount of log entries by changing the loglevel of some log messages

 - Fix: Using CLUSTERED BY Column in PARTITIONED BY clause threw
   misleading exception

 - Fix: Inserting arrays with a null value at first position
   failed

 - Fix: Nested Columns of ignored objects where exported
   as `null` values when using COPY TO

 - improved speed of bulk inserts in partitioned tables to avoid request
   timeouts

 - Fix: The clustered-by columns could be updated if they were nested.

 - Fix: Fixed an edge case where group by queries on system tables or
   grouping on primary key or routing column and using limit or selecting
   the same aggregation twice did not execute correctly.

 - Fixed possible race condition that could cause the `LIMIT` to not be applied
   correctly.

 - Fixed NPE which could occure on a shard failure while collecting
   distributed (e.g. group by query)

 - Fix: correctly validate array values in INSERT and UPDATE statements

 - Fix: NULL element in array in first element of bulk insert threw NPE

 - Fix: array columns that were nested inside multiple objects had
   incorrect data type (type of their elements instead of array type)

 - Fix: adding column on partitioned table without partitions threw exception
   although column was added to schema

2014/11/18 0.45.5
=================

 - Updated crate-admin to version 0.10.2 which includes following changes:
